--- a/style.css
+++ b/style.css
@@ -363,7 +363,7 @@ html body {
 
 .service {
   padding: 80px 120px;
-  background-image: url(image/PF_service.jpg);
+  background-image: url(image/pf-service.jpg);
 }
 
 .service-container {
