--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ html body {
 .about {
   padding: 80px;
   margin: 0;
-  background-image: url(image/\ PF_about.jpg);
+  background-image: url(image/pf-top.jpg);
   background-color: #222222;
 }
 
